update complete myport

--- a/src/app/canvas-menu/canvas-menu.component.html
+++ b/src/app/canvas-menu/canvas-menu.component.html
@@ -18,9 +18,9 @@
                               </a>
                           </li>
                           <li class="ico-line">
-                              <a href="#" title="{{ userdetail.memberInfo.FirstName }}">
+                              <a href="#" title="{{ userdetail.FirstName }}">
                                   <img src="./assets/Images/icons/icon-login-white.png" />
-                                  {{ userdetail.memberInfo.FirstName }}
+                                  {{ userdetail.FirstName }}
                                   <!-- <img src="./assets/Images/icons/p_dropdown_select.png" /> -->
                               </a>
                           </li>
