--- a/src/app/login/forgotpassword/forgotpassword.component.html
+++ b/src/app/login/forgotpassword/forgotpassword.component.html
@@ -12,11 +12,11 @@
         <div class="col d-flex justify-content-end">
           <ul>
             <li class="th" (click)="switchlang('th')" [ngClass]="{'current': langth}">
-              <a  title="Thai">Thai</a>
-          </li>
-          <li class="en" (click)="switchlang('en')" [ngClass]="{'current': langen}">
-              <a  title="Eng">Eng</a>
-          </li>
+              <a title="Thai">Thai</a>
+            </li>
+            <li class="en" (click)="switchlang('en')" [ngClass]="{'current': langen}">
+              <a title="Eng">Eng</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -50,7 +50,7 @@
                 <input id="email" name="email" maxlength="30" type="text" formControlName="email" required>
                 <div class="form-control-feedback" *ngIf="this.formforgot.controls.email.errors && ( this.formforgot.controls.email.touched)">
                   <p *ngIf="this.formforgot.controls.email.errors.required">กรุณากรอกข้อมูลให้ครบถ้วน</p>
-                  <p *ngIf="this.formforgot.controls.email.errors.pattern">ข้อมูลไม่ถูกต้อง</p>																								
+                  <p *ngIf="this.formforgot.controls.email.errors.pattern">ข้อมูลไม่ถูกต้อง</p>
                 </div>
               </div>
             </div>
@@ -93,27 +93,49 @@
   </div>
 </div>
 <div class="modal fade modal-custom" tabindex="-1" role="dialog" id="reset" style="z-index: 9999;">
-	<div class="modal-dialog" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h4 class="modal-title">รีเซ็ตรหัสผ่าน</h4>
-			</div>
-			<div class="modal-body" id="content-scroll-1">	
-				<h3>fundchoiceuat.lhfund.co.th ได้รับข้อมูลการขอเปลี่ยนรหัสผ่านของคุณเรียบร้อยแล้ว <br>
- 
-          ระบบจะส่งอีเมลรายละเอียดการสมัครให้คุณ ภายใน 24 ชั่วโมง หากไม่ได้รับอีเมลยืนยัน กรุณาตรวจสอบที่ เมลขยะ (Junk Mail, Spam) ของคุณค่ะ</h3>				
-			</div>
-			<div class="modal-footer" style="display: block;">
-				<div class="row justify-content-end">
-					<div class="col-sm-6">
-						<button class="btn-med btn-primary" data-dismiss="modal" (click)="navigate('')">
-							<p style="margin-top: 7px;">ตกลง
-								<i class="fa fa-angle-right" aria-hidden="true"></i>
-							</p>
-						</button>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">รีเซ็ตรหัสผ่าน</h4>
+      </div>
+      <div class="modal-body" id="content-scroll-1">
+        <h3>fundchoiceuat.lhfund.co.th ได้รับข้อมูลการขอเปลี่ยนรหัสผ่านของคุณเรียบร้อยแล้ว <br> ระบบจะส่งอีเมลรายละเอียดการสมัครให้คุณ
+          ภายใน 24 ชั่วโมง หากไม่ได้รับอีเมลยืนยัน กรุณาตรวจสอบที่ เมลขยะ (Junk Mail, Spam) ของคุณค่ะ</h3>
+      </div>
+      <div class="modal-footer" style="display: block;">
+        <div class="row justify-content-end">
+          <div class="col-sm-6">
+            <button class="btn-med btn-primary" data-dismiss="modal" (click)="navigate('')">
+              <p style="margin-top: 7px;">ตกลง
+                <i class="fa fa-angle-right" aria-hidden="true"></i>
+              </p>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade modal-custom" tabindex="-1" role="dialog" id="message" style="z-index: 9999;"  *ngIf="message">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">เข้าสู่ระบบล้มเหลว</h4>
+      </div>
+      <div class="modal-body" id="content-scroll-1">
+        <h3>{{ message }}</h3>
+      </div>
+      <div class="modal-footer" style="display: block;">
+        <div class="row justify-content-end">
+          <div class="col-sm-6">
+            <button class="btn-med btn-primary" data-dismiss="modal">
+              <p style="margin-top: 7px;">ตกลง
+                <i class="fa fa-angle-right" aria-hidden="true"></i>
+              </p>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
