--- a/src/app/profile/changepassword/changepassword.component.html
+++ b/src/app/profile/changepassword/changepassword.component.html
@@ -27,81 +27,173 @@
 
                     <p>{{ 'CONTENT.unit-holder-num' | translate }}</p>
                     <div class="select-wrapper inline-block">
-                        <select [(ngModel)]="unitholderno" name="unitholderno" (ngModelChange)="onChange()" id="ddlLink">
-                            <option [ngValue]="unitholder" *ngFor="let unitholder of userall.unitholderList; let i = index">{{
-                                unitholder.Text }}</option>
+                        <select [(ngModel)]="unitholderno" name="unitholderno" (ngModelChange)="onChange()" id="unitholderno">
+                            <option [ngValue]="unitholder" *ngFor="let unitholder of userall.unitholderlist; let i = index">{{
+                                unitholder.UnitholderNo }}</option>
                         </select>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <p>{{ 'CONTENT.unit-holder-name' | translate }}</p>
-                    <span class="txt-middle" *ngIf="userselect.UnitholderInfo">{{ userselect?.UnitholderInfo?.UnitHolderName}}</span>
-                    <span class="txt-middle">{{ userselect?.unitholder?.UnitHolderName}}</span>
+                    <span class="txt-middle">{{ userselect.FirstName}} {{ userselect.LastName}}</span>
                 </div>
                 <div class="col-md-6">
                     <p>{{ 'CONTENT.address' | translate }}</p>
-                    <span class="txt-middle" *ngIf="userselect.Address">{{ userselect?.Address?.ContactAddress}}</span>
-                    <span class="txt-middle">{{ userselect?.address?.ContactAddress}}</span>
+                    <span class="txt-middle">{{ userselect.ContactAddress}}</span>
                 </div>
             </div>
         </div>
     </div>
     <div class="detail-body-wrapper">
-        <div class="row">
-            <div class="col-md-9">
-                <div class="row">
-                    <div class="col-md-4">
-                        <span class="txt-middle">{{ 'CONTENT.current-p' | translate }}</span>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="input-wrapper ">
-                            <input id="name" name="name" maxlength="30" type="text" class="bg-gray" placeholder="">
+        <form [formGroup]="formchangepass" (ngSubmit)="onSubmit()">
+            <div class="row">
+                <div class="col-md-9">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <span class="txt-middle">{{ 'CONTENT.current-p' | translate }}</span>
+                        </div>
+                        <div class="col-md-6 form-group" [ngClass]="ValidatorDisplayCss('currentpassword')">
+                            <div class="input-wrapper ">
+                                <input id="currentpassword" name="currentpassword" maxlength="16" type="password" class="bg-gray" formControlName="currentpassword" required>
+                                <div class="form-control-feedback" *ngIf="this.formchangepass.controls.currentpassword.errors && ( this.formchangepass.controls.currentpassword.touched)">
+                                    <p *ngIf="this.formchangepass.controls.currentpassword.errors.required ">กรุณากรอกข้อมูลให้ครบถ้วน</p>
+                                    <p *ngIf="this.formchangepass.controls.currentpassword.errors.pattern">(UpperCase, LowerCase,
+                                        Number/SpecialChar and min 8 Chars)</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="row">
+                    <div class="row">
 
-                    <div class="col-md-4">
-                        <span class="txt-middle">{{ 'CONTENT.new-p' | translate }}</span>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="input-wrapper ">
-                            <input id="name" name="name" maxlength="30" type="text" class="bg-gray" placeholder="">
+                        <div class="col-md-4">
+                            <span class="txt-middle">{{ 'CONTENT.new-p' | translate }}</span>
+                        </div>
+                        <div class="col-md-6 form-group" [ngClass]="ValidatorDisplayCss('newpassword')">
+                            <div class="input-wrapper ">
+                                <input id="newpassword" name="newpassword" maxlength="16" type="password" class="bg-gray" formControlName="newpassword" required>
+                                <div class="form-control-feedback" *ngIf="this.formchangepass.controls.newpassword.errors && ( this.formchangepass.controls.newpassword.touched)">
+                                    <p *ngIf="this.formchangepass.controls.newpassword.errors.required ">กรุณากรอกข้อมูลให้ครบถ้วน</p>
+                                    <p *ngIf="this.formchangepass.controls.newpassword.errors.pattern">(UpperCase, LowerCase,
+                                        Number/SpecialChar and min 8 Chars)</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="row">
+                    <div class="row">
 
-                    <div class="col-md-4">
-                        <span class="txt-middle">{{ 'CONTENT.confirm-new-p' | translate }}</span>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="input-wrapper ">
-                            <input id="name" name="name" maxlength="30" type="text" class="bg-gray" placeholder="">
+                        <div class="col-md-4">
+                            <span class="txt-middle">{{ 'CONTENT.confirm-new-p' | translate }}</span>
+                        </div>
+                        <div class="col-md-6 form-group" [ngClass]="ValidatorDisplayCss('confirmpassword')">
+                            <div class="input-wrapper ">
+                                <input id="confirmpassword" name="confirmpassword" maxlength="16" type="password" class="bg-gray" formControlName="confirmpassword" required>
+                                <div class="form-control-feedback" *ngIf="this.formchangepass.controls.confirmpassword.errors && ( this.formchangepass.controls.confirmpassword.touched)">
+                                    <p *ngIf="this.formchangepass.controls.confirmpassword.errors.required ">กรุณากรอกข้อมูลให้ครบถ้วน</p>
+                                    <p *ngIf="this.formchangepass.controls.confirmpassword.errors.pattern">(UpperCase, LowerCase,
+                                        Number/SpecialChar and min 8 Chars)</p>
+                                    <p *ngIf="cpwd.hasError('invalid')">รหัสไม่ตรงกัน</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
 
 
-                <div class="row">
-                    <div class="col-md-3 col-6 offset-md-4">
-                        <button class="btn-med btn-primary">
-                            {{ 'BUTTON.ok' | translate }}
-                            <i class="fa fa-angle-right" aria-hidden="true"></i>
+                    <div class="row">
+                        <div class="col-md-3 col-6 offset-md-4">
+                            <button class="btn-med btn-primary">
+                                {{ 'BUTTON.ok' | translate }}
+                                <i class="fa fa-angle-right" aria-hidden="true"></i>
 
-                        </button>
-                    </div>
-                    <div class="col-md-3 col-6">
-                        <button class="btn-med btn-cancel">
-                            {{ 'BUTTON.cancel' | translate }}
-                            <i class="fa fa-angle-right" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                        <div class="col-md-3 col-6">
+                            <button class="btn-med btn-cancel">
+                                {{ 'BUTTON.cancel' | translate }}
+                                <i class="fa fa-angle-right" aria-hidden="true"></i>
 
-                        </button>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </form>
 
 
     </div>
+</div>
+<div class="modal fade modal-custom" tabindex="-1" role="dialog"  style="z-index: 9999;" id="otpchangepassword">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+
+                <h4 class="modal-title">{{ 'LOGIN.otp' | translate }}</h4>
+            </div>
+            <div class="modal-body" id="content-scroll-1">
+                <form [formGroup]="formotp">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <p>{{ 'LOGIN.otp-send' | translate }}
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-8">
+                            <div class="input-wrapper">
+                                <input id="tel" name="tel" maxlength="30" type="text" [value]="res.mobile" disabled class="bg-gray">
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="btn-wrapper" style="margin: 0;">
+                                <button class="btn-med btn-blue" (click)="requestotp()">
+                                    {{ 'BUTTON.otp' | translate }}
+                                    <i class="fa fa-angle-right" aria-hidden="true"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <p>{{ 'LOGIN.otp-receive' | translate }}</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 form-group">
+                            <div class="input-wrapper">
+                                    <input class="bg-gray" id="otp" name="otp" maxlength="6" type="text" formControlName="otp" (keypress)="numberOnly($event)">
+                                    <div class="form-control-feedback" *ngIf="this.formotp.controls.otp.errors && ( this.formotp.controls.otp.touched)">
+                                      <p *ngIf="this.formotp.controls.otp.errors.required">กรุณากรอกข้อมูลให้ครบถ้วน</p>
+                                      <!-- <p *ngIf="this.form.controls.otp.errors.pattern">ข้อมูลไม่ถูกต้อง</p> -->
+                      
+                                    </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row pb-4">
+                        <div class="col-md-12">
+                            <p>{{ 'LOGIN.otp-request' | translate }}</p>
+                        </div>
+                    </div>
+
+                    <div class="row mt-3 justify-content-center">
+                        <div class="col-md-4 col-6">
+                            <button class="btn-med btn-primary" (click)="updatepassword()">
+                                {{ 'BUTTON.confirm' | translate }}
+                                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                        <div class="col-md-4 col-6">
+                            <button class="btn-med btn-cancel" data-dismiss="modal">
+                                {{ 'BUTTON.cancel' | translate }}
+                                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+            </div>
+        </div>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
 </div>
