--- a/src/app/login/changepasswordlogin/changepasswordlogin.component.html
+++ b/src/app/login/changepasswordlogin/changepasswordlogin.component.html
@@ -12,11 +12,11 @@
         <div class="col d-flex justify-content-end">
           <ul>
             <li class="th" (click)="switchlang('th')" [ngClass]="{'current': langth}">
-              <a  title="Thai">Thai</a>
-          </li>
-          <li class="en" (click)="switchlang('en')" [ngClass]="{'current': langen}">
-              <a  title="Eng">Eng</a>
-          </li>
+              <a title="Thai">Thai</a>
+            </li>
+            <li class="en" (click)="switchlang('en')" [ngClass]="{'current': langen}">
+              <a title="Eng">Eng</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -34,22 +34,31 @@
           </div> -->
             <div class="col-sm-12 form-group" [ngClass]="ValidatorDisplayCss5('password')">
               <p>{{ 'LOGIN.change-p' | translate }}
+                <a style="cursor: pointer;">
+                  <i class="fa fa-question-circle" aria-hidden="true" placement="top" ngbTooltip="รหัสผ่านอย่างน้อย 8 ตัวอักษร ต้องประกอบด้วยข้อมูลต่อไปนี้ ตัวพิมพ์เล็ก พิมพ์ใหญ่ อักษระพิเศษ รวมทั้งตัวเลข "></i>
+                </a>
+              </p>
               <div class="input-wrapper ">
                 <input id="password" name="password" maxlength="16" type="password" formControlName="password" required>
                 <div class="form-control-feedback" *ngIf="this.formchange.controls.password.errors && ( this.formchange.controls.password.touched)">
                   <p *ngIf="this.formchange.controls.password.errors.required ">กรุณากรอกข้อมูลให้ครบถ้วน</p>
-                  <p *ngIf="this.formchange.controls.password.errors.pattern">(UpperCase, LowerCase, Number/SpecialChar and min 8 Chars)</p>
+                  <p *ngIf="this.formchange.controls.password.errors.pattern">รหัสผ่านอย่างน้อย 8 ตัวอักษร ต้องประกอบด้วยข้อมูลต่อไปนี้
+                    ตัวพิมพ์เล็ก พิมพ์ใหญ่ อักษระพิเศษ รวมทั้งตัวเลข </p>
                 </div>
               </div>
             </div>
             <div class="col-sm-12 form-group" [ngClass]="ValidatorDisplayCss5('repeatPassword')">
               <p>{{ 'LOGIN.comfirm-p' | translate }}
+                <a style="cursor: pointer;">
+                  <i class="fa fa-question-circle" aria-hidden="true" placement="top" ngbTooltip="รหัสผ่านอย่างน้อย 8 ตัวอักษร ต้องประกอบด้วยข้อมูลต่อไปนี้ ตัวพิมพ์เล็ก พิมพ์ใหญ่ อักษระพิเศษ รวมทั้งตัวเลข "></i>
+                </a>
               </p>
               <div class="input-wrapper ">
                 <input id="repeatPassword" name="repeatPassword" maxlength="16" type="password" formControlName="repeatPassword" required>
                 <div class="form-control-feedback" *ngIf="this.formchange.controls.repeatPassword.errors && ( this.formchange.controls.repeatPassword.touched)">
-                  <p *ngIf="this.formchange.controls.repeatPassword.errors.required">กรุณากรอกข้อมูลให้ครบถ้วน</p>                  
-                  <p *ngIf="this.formchange.controls.repeatPassword.errors.pattern">(UpperCase, LowerCase, Number/SpecialChar and min 8 Chars)</p>
+                  <p *ngIf="this.formchange.controls.repeatPassword.errors.required">กรุณากรอกข้อมูลให้ครบถ้วน</p>
+                  <p *ngIf="this.formchange.controls.repeatPassword.errors.pattern">รหัสผ่านอย่างน้อย 8 ตัวอักษร ต้องประกอบด้วยข้อมูลต่อไปนี้
+                    ตัวพิมพ์เล็ก พิมพ์ใหญ่ อักษระพิเศษ รวมทั้งตัวเลข </p>
                   <p *ngIf="cpwd.hasError('invalid')">รหัสไม่ตรงกัน</p>
                 </div>
               </div>
@@ -98,7 +107,6 @@
   </div>
 </div>
 <div class="contact-popup active" *ngIf="page == 'otp'">
-
   <div class="popup-content">
     <div class="contact-title">
       <div class="row">
@@ -113,11 +121,11 @@
         <div class="col d-flex justify-content-end">
           <ul>
             <li class="th" (click)="switchlang('th')" [ngClass]="{'current': langth}">
-              <a  title="Thai">Thai</a>
-          </li>
-          <li class="en" (click)="switchlang('en')" [ngClass]="{'current': langen}">
-              <a  title="Eng">Eng</a>
-          </li>
+              <a title="Thai">Thai</a>
+            </li>
+            <li class="en" (click)="switchlang('en')" [ngClass]="{'current': langen}">
+              <a title="Eng">Eng</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -205,49 +213,31 @@
 </div>
 
 
-<div class="modal fade modal-custom" tabindex="-1" role="dialog" id="confirm" style="z-index: 9999;">
-	<div class="modal-dialog" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h4 class="modal-title">ยืนยันการเปลี่ยนรหัสผ่าน</h4>
-			</div>
-			<div class="modal-body" id="content-scroll-1">	
-				<h3>ท่านได้ทำการเปลี่ยนรหัสผ่านเรียบร้อยแล้ว</h3>				
-			</div>
-			<div class="modal-footer" style="display: block;">
-				<div class="row justify-content-end">
-					<div class="col-sm-6">
-						<button class="btn-med btn-primary" data-dismiss="modal" (click)="navigate('')">
-							<p style="margin-top: 7px;">ตกลง
-								<i class="fa fa-angle-right" aria-hidden="true"></i>
-							</p>
-						</button>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-<div class="modal fade modal-custom" tabindex="-1" role="dialog" id="activate" style="z-index: 9999;">
-	<div class="modal-dialog" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h4 class="modal-title">ยืนยันการเปลี่ยนรหัสผ่าน</h4>
-			</div>
-			<div class="modal-body" id="content-scroll-1">	
-				<h3>{{ message }}</h3>				
-			</div>
-			<div class="modal-footer" style="display: block;">
-				<div class="row justify-content-end">
-					<div class="col-sm-6">
-						<button class="btn-med btn-primary" data-dismiss="modal" (click)="navigate('')">
-							<p style="margin-top: 7px;">ตกลง
-								<i class="fa fa-angle-right" aria-hidden="true"></i>
-							</p>
-						</button>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+<div class="modal fade modal-custom" tabindex="-1" role="dialog" id="dialog" style="z-index: 9999;" *ngIf="message">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">ยืนยันการเปลี่ยนรหัสผ่าน</h4>
+      </div>
+      <div class="modal-body" id="content-scroll-1">
+        <h3>{{ message }}</h3>
+      </div>
+      <div class="modal-footer" style="display: block;">
+        <div class="row justify-content-end">
+          <div class="col-sm-6">
+            <button class="btn-med btn-primary" data-dismiss="modal" (click)="navigate('')" *ngIf="exit">
+              <p style="margin-top: 7px;">ตกลง
+                <i class="fa fa-angle-right" aria-hidden="true"></i>
+              </p>
+            </button>
+            <button class="btn-med btn-primary" data-dismiss="modal" *ngIf="!exit">
+              <p style="margin-top: 7px;">ตกลง
+                <i class="fa fa-angle-right" aria-hidden="true"></i>
+              </p>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
