--- a/src/app/report/today-list/today-list.component.html
+++ b/src/app/report/today-list/today-list.component.html
@@ -28,7 +28,7 @@
           <p>{{ 'CONTENT.unit-holder-num' | translate }}</p>
           <div class="select-wrapper inline-block  pb-3">
             <select [(ngModel)]="unitholderno" name="unitholderno" (ngModelChange)="onChange()" id="ddlLink">
-              <option [ngValue]="unitholder" *ngFor="let unitholder of userall.unitholderList; let i = index">{{ unitholder.Text
+              <option [ngValue]="unitholder" *ngFor="let unitholder of userall.unitholderlist; let i = index">{{ unitholder.UnitholderNo
                 }}</option>
             </select>
           </div>
@@ -36,8 +36,7 @@
 
         <div class="col-md-3">
           <p>{{ 'CONTENT.unit-holder-name' | translate }}</p>
-          <span class="txt-middle" *ngIf="userselect.UnitholderInfo">{{ userselect?.UnitholderInfo?.UnitHolderName}}</span>
-          <span class="txt-middle">{{ userselect?.unitholder?.UnitHolderName}}</span>
+          <span class="txt-middle">{{ userselect.FirstName}} {{ userselect.LastName}}</span>
         </div>
 
         <div class="col-md-3">
@@ -49,8 +48,7 @@
           <div class="row">
             <div class="col-md-6">
               <p>{{ 'CONTENT.address' | translate }}</p>
-              <span class="txt-middle" *ngIf="userselect.Address">{{ userselect?.Address?.ContactAddress}}</span>
-              <span class="txt-middle">{{ userselect?.address?.ContactAddress}}</span>
+              <span class="txt-middle">{{ userselect.ContactAddress}}</span>
             </div>
           </div>
 
