--- a/src/app/transaction/exchange/exchange.component.html
+++ b/src/app/transaction/exchange/exchange.component.html
@@ -27,20 +27,21 @@
         <div class="col-md-3">
           <p>{{ 'CONTENT.unit-holder-num' | translate }}</p>
           <div class="select-wrapper inline-block">
-            <select [(ngModel)]="unitholderno" name="unitholderno" (ngModelChange)="onChange()" id="ddlLink">
-              <option [ngValue]="unitholder" *ngFor="let unitholder of userall.unitholder; let i = index" >{{ unitholder.Text }}</option>
+            <select [(ngModel)]="unitholderno" name="unitholderno" (ngModelChange)="onChange()" id="unitholderno">
+              <option [ngValue]="unitholder" *ngFor="let unitholder of userall.unitholderlist; let i = index">{{ unitholder.UnitholderNo
+                }}</option>
             </select>
           </div>
         </div>
 
         <div class="col-md-3">
           <p>{{ 'CONTENT.unit-holder-name' | translate }}</p>
-          <span class="txt-middle">{{ userselect?.unitholder?.UnitHolderName}}</span>
+          <span class="txt-middle">{{ userselect.FirstName}} {{ userselect.LastName}}</span>
         </div>
 
         <div class="col-md-6">
           <p>{{ 'CONTENT.address' | translate }}</p>
-          <span class="txt-middle">{{ userselect?.address?.ContactAddress1}}  {{ userselect?.address?.ContactAddress2}} {{ userselect?.address?.ContactProvince}} {{ userselect?.address?.ContactZipCode}}</span>
+          <span class="txt-middle">{{ userselect.ContactAddress}}</span>
         </div>
 
       </div>
@@ -58,7 +59,7 @@
             <p>{{ 'CONTENT.input-date' | translate }}</p>
           </div>
           <div class="col-md-6">
-            <span>7 มิถุนายน 2561</span>
+            <span>{{ currentdate }}</span>
           </div>
         </div>
         <div class="row">
@@ -67,11 +68,10 @@
           </div>
           <div class="col-md-6">
             <div class="select-wrapper inline-block">
-
-              <select name="ddlLink" id="ddlLink">
-                <option value="0" selected="">KFCRASH - กองทุนกรุงศรีตราสารเงิน</option>
-                <option value="36">KFCRASH - กองทุนกรุงศรีตราสารเงิน</option>
-                <option value="29">KFCRASH - กองทุนกรุงศรีตราสารเงิน</option>
+              <select id="fundlist" [(ngModel)]="fundlist" name="fundlist" (ngModelChange)="fundlistonChange()">
+                <option [ngValue]="fundlist" *ngFor="let fundlist of unitholderswitching.fundlist; let i = index">
+                  {{ fundlist.FundName }}
+                </option>
               </select>
             </div>
           </div>
@@ -155,12 +155,11 @@
           </div>
           <div class="col-md-6">
             <div class="select-wrapper inline-block">
-
-              <select name="ddlLink" id="ddlLink">
-                <option value="0" selected="">ธนาคารกรุงศรีอยุธยา จำกัด (มหาชน)</option>
-                <option value="36">ธนาคารกรุงศรีอยุธยา จำกัด (มหาชน)</option>
-                <option value="29">ธนาคารกรุงศรีอยุธยา จำกัด (มหาชน)</option>
-              </select>
+                <select id="banklist" [(ngModel)]="banklist" name="banklist" (ngModelChange)="banklistonChange()">
+                    <option [ngValue]="banklist" *ngFor="let banklist of unitholderswitching.bankaccountlist; let i = index">
+                      {{ banklist.BankName }}
+                    </option>                  
+                </select>
             </div>
           </div>
         </div>
@@ -172,7 +171,7 @@
           <div class="col-md-6 col-lg-3">
 
             <div class="input-wrapper">
-              <input class=" textinput dateinput bg-gray" [(ngModel)]="model" ngbDatepicker #d="ngbDatepicker" id="startDate" placeholder="วว/ดด/ปปปป"
+              <input class=" textinput dateinput bg-gray" [(ngModel)]="datepick" ngbDatepicker #d="ngbDatepicker" id="startDate" placeholder="วว/ดด/ปปปป"
                 name="date" type="text" (click)="d.toggle()">
             </div>
 
@@ -248,17 +247,17 @@
 
         <div class="col-md-3">
           <p>{{ 'CONTENT.unit-holder-num' | translate }}</p>
-          <span class="txt-middle">{{ userselect?.unitholder?.UnitHolderNo}}</span>
+          <span class="txt-middle">{{ userselect.UnitholderNo}}</span>
         </div>
 
         <div class="col-md-3">
           <p>{{ 'CONTENT.unit-holder-name' | translate }}</p>
-          <span class="txt-middle">{{ userselect?.unitholder?.UnitHolderName}}</span>
+          <span class="txt-middle">{{ userselect.FirstName}} {{ userselect.LastName}}</span>
         </div>
 
         <div class="col-md-6">
           <p>{{ 'CONTENT.address' | translate }}</p>
-          <span class="txt-middle">{{ userselect?.address?.ContactAddress1}}  {{ userselect?.address?.ContactAddress2}} {{ userselect?.address?.ContactProvince}} {{ userselect?.address?.ContactZipCode}}</span>
+          <span class="txt-middle">{{ userselect.ContactAddress}}</span>
         </div>
 
       </div>
@@ -276,7 +275,7 @@
             <p>{{ 'CONTENT.input-date' | translate }}</p>
           </div>
           <div class="col-md-6">
-            <span>7 มิถุนายน 2561</span>
+            <span>{{ currentdate }}</span>
           </div>
         </div>
         <div class="row">
@@ -284,7 +283,7 @@
             <p>{{ 'CONTENT.fund-name-r' | translate }}</p>
           </div>
           <div class="col-md-6">
-            <span>KFCRASH - กองทุนกรุงศรีตราสารเงิน</span>
+            <span>{{ fundlist.FundName }}</span>
           </div>
         </div>
       </div>
@@ -352,7 +351,7 @@
             <p>{{ 'CONTENT.switching-to' | translate }}</p>
           </div>
           <div class="col-md-6">
-            <span>ธนคารกรุงศรีอยุธยา จำกัด (มหาชน)</span>
+            <span>{{ banklist.BankName }}</span>
           </div>
         </div>
 
@@ -361,7 +360,7 @@
             <p>{{ 'CONTENT.Advance-sw-date' | translate }}</p>
           </div>
           <div class="col-md-3">
-            <span>10 มิถุนายน 2561</span>
+            <span>{{date}}</span>
           </div>
         </div>
 
@@ -413,17 +412,17 @@
 
         <div class="col-md-3">
           <p>{{ 'CONTENT.unit-holder-num' | translate }}</p>
-          <span class="txt-middle">{{ userselect?.unitholder?.UnitHolderNo}}</span>
+          <span class="txt-middle">{{ userselect.UnitholderNo}}</span>
         </div>
 
         <div class="col-md-3">
           <p>{{ 'CONTENT.unit-holder-name' | translate }}</p>
-          <span class="txt-middle">{{ userselect?.unitholder?.UnitHolderName}}</span>
+          <span class="txt-middle">{{ userselect.FirstName}} {{ userselect.LastName}}</span>
         </div>
 
         <div class="col-md-6">
           <p>{{ 'CONTENT.address' | translate }}</p>
-          <span class="txt-middle">{{ userselect?.address?.ContactAddress1}}  {{ userselect?.address?.ContactAddress2}} {{ userselect?.address?.ContactProvince}} {{ userselect?.address?.ContactZipCode}}</span>
+          <span class="txt-middle">{{ userselect.ContactAddress}}</span>
         </div>
 
       </div>
@@ -441,7 +440,7 @@
             <p>{{ 'CONTENT.input-date' | translate }}</p>
           </div>
           <div class="col-md-6">
-            <span>7 มิถุนายน 2561</span>
+            <span>{{ currentdate }}</span>
           </div>
         </div>
         <div class="row">
@@ -449,7 +448,7 @@
             <p>{{ 'CONTENT.fund-name-r' | translate }}</p>
           </div>
           <div class="col-md-6">
-            <span>KFCRASH - กองทุนกรุงศรีตราสารเงิน</span>
+            <span>{{ fundlist.FundName }}</span>
           </div>
         </div>
       </div>
@@ -517,7 +516,7 @@
             <p>{{ 'CONTENT.switching-to' | translate }}</p>
           </div>
           <div class="col-md-6">
-            <span>ธนคารกรุงศรีอยุธยา จำกัด (มหาชน)</span>
+            <span>{{ banklist.BankName }}</span>
           </div>
         </div>
 
@@ -526,7 +525,7 @@
             <p>{{ 'CONTENT.Advance-sw-date' | translate }}</p>
           </div>
           <div class="col-md-3">
-            <span>10 มิถุนายน 2561</span>
+            <span>{{date}}</span>
 
           </div>
         </div>
@@ -587,20 +586,21 @@
         <div class="col-md-3">
           <p>{{ 'CONTENT.unit-holder-num' | translate }}</p>
           <div class="select-wrapper inline-block">
-            <select  [(ngModel)]="unitholderno" name="unitholderno" (ngModelChange)="onChange()" id="ddlLink">
-              <option [ngValue]="unitholder" *ngFor="let unitholder of userall.unitholder; let i = index" >{{ unitholder.Text }}</option>
+            <select [(ngModel)]="unitholderno" name="unitholderno" (ngModelChange)="onChange()" id="unitholderno">
+              <option [ngValue]="unitholder" *ngFor="let unitholder of userall.unitholderlist; let i = index">{{ unitholder.UnitholderNo
+                }}</option>
             </select>
           </div>
         </div>
 
         <div class="col-md-3">
           <p>{{ 'CONTENT.unit-holder-name' | translate }}</p>
-          <span class="txt-middle">{{ userselect?.unitholder?.UnitHolderName}}</span>
+          <span class="txt-middle">{{ userselect.FirstName}} {{ userselect.LastName}}</span>
         </div>
 
         <div class="col-md-6">
           <p>{{ 'CONTENT.address' | translate }}</p>
-          <span class="txt-middle">{{ userselect?.address?.ContactAddress1}}  {{ userselect?.address?.ContactAddress2}} {{ userselect?.address?.ContactProvince}} {{ userselect?.address?.ContactZipCode}}</span>
+          <span class="txt-middle">{{ userselect.ContactAddress}}</span>
         </div>
 
       </div>
